# FootballGame

./: CMakeLists.txt
src/: Game.cpp  Game.h  main.cpp
src/core/: GameEngine.cpp  GameEngine.h
src/entity/: Entity.cpp  Entity.h  Player.cpp  Player.h
src/game/: Scene.cpp  Scene.h
src/game/test/: TestScene.cpp  TestScene.h
src/input/: InputManager.cpp  InputManager.h
src/render/: RenderDispatcher.cpp  RenderDispatcher.h  RenderEngine.cpp  RenderEngine.h
src/render/Renderers/: EntityRenderer.h  Renderer.cpp  Renderer.h
src/render/layer/: IRenderLayer.h  LayerPriorities.cpp  LayerPriorities.h  RenderLayer.cpp  RenderLayer.h
src/render/layer/implemented/: ButtonRenderLayer.cpp  ButtonRenderLayer.h  EntityRenderLayer.cpp  EntityRenderLayer.h
src/render/layer/layers/: EntityRenderLayer.cpp  EntityRenderLayer.h
src/render/renderers/: EntityRenderer.cpp  IRenderer.h  Renderer.h
src/render/renderers/implemented/: EntityRenderer.cpp  EntityRenderer.h
src/scenes/: Scene.cpp  Scene.h
src/scenes/football/: FootballFieldScene.cpp  FootballFieldScene.h
src/scenes/football/objects/: Football.cpp  Football.h
src/scenes/football/positions/: QB.cpp  QB.h
src/scenes/menus/: StartMenu.cpp  StartMenu.h
src/scenes/test/: TestScene.cpp  TestScene.h
src/ui/: Button.cpp  Button.h  IUIElement.h
src/utils/: Directions.cpp  Logger.cpp  Logger.h  Rectangle.cpp  Rectangle.h
src/utils/math/: Vector2D.cpp  Vector2D.h
